; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_m_menu.c_M_LoadGame.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_m_menu.c_M_LoadGame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@netgame = common dso_local global i64 0, align 8
@LOADNET = common dso_local global i32 0, align 4
@LoadDef = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @M_LoadGame(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @netgame, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i32, i32* @LOADNET, align 4
  %7 = call i32 @M_StartMessage(i32 %6, i32* null, i32 0)
  br label %11

8:                                                ; preds = %1
  %9 = call i32 @M_SetupNextMenu(i32* @LoadDef)
  %10 = call i32 (...) @M_ReadSaveStrings()
  br label %11

11:                                               ; preds = %8, %5
  ret void
}

declare dso_local i32 @M_StartMessage(i32, i32*, i32) #1

declare dso_local i32 @M_SetupNextMenu(i32*) #1

declare dso_local i32 @M_ReadSaveStrings(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
